--- a/weather-fullstack/java/src/main/resources/application.properties
+++ b/weather-fullstack/java/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=weather_appuser
 spring.datasource.password=alwaysSunny
 
 API_URL=http://api.openweathermap.org/
-API_KEY=Your API Key here!
+API_KEY=3f6d3f661d95948fa6e3fdeccfa620a7
 
 
 jwt.header=Authorization
